--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,11 @@
-//
+// Variables
+//@import "variables";
+
+// Bulma
+@import "node_modules/bulma/bulma";
+
+// Font awesome
+@import "node_modules/font-awesome/scss/font-awesome";
+
+// Buefy Vue Modules
+@import "node_modules/buefy/src/scss/buefy";
