--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,22 @@
 // Variables
-//@import "variables";
+@import "variables";
+// // Fonts
+// @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Bulma
-@import "node_modules/bulma/bulma";
+@import '~bulma/bulma';
 
 // Font awesome
 @import "node_modules/font-awesome/scss/font-awesome";
 
 // Buefy Vue Modules
 @import "node_modules/buefy/src/scss/buefy";
+
+// Custom SASS pages
+@import "overrides";
+@import "helpers";
+@import "styles";
+@import "manage";
+
+// Set your colors
+$primary: #f2c333;
