--- a/resources/sass/manage.scss
+++ b/resources/sass/manage.scss
@@ -5,3 +5,25 @@
 	background-color: white;
 	// overflow-y: scroll;
 }
+
+.main-content {
+top: 4rem;
+right: 0;
+
+  @include desktop {
+    position: absolute;
+    left: 200px;
+  }
+}
+
+hr{
+	background-color: grey;
+  border: none;
+  display: block;
+  height: 1px;
+  margin: 1.5rem 0;
+}
+
+.flex-container {
+  margin: 10px 25px;
+}
