--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,11 @@
 @import '~bulma/bulma';
 
 // Font awesome
-@import "node_modules/font-awesome/scss/font-awesome";
+// @import "node_modules/font-awesome/scss/font-awesome";
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
 
 // Buefy Vue Modules
 @import "node_modules/buefy/src/scss/buefy";
