--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23283,6 +23283,12 @@ MIT (https://github.com/Wikiki/bulma-steps/blob/master/LICENSE)
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
 }
 
+.manage-user-image {
+  border-radius: 100%;
+  height: 50px;
+  height: 50px;
+}
+
 .m-t-5 {
   margin-top: 5px !important;
 }
