--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23232,6 +23232,18 @@ MIT (https://github.com/Wikiki/bulma-steps/blob/master/LICENSE)
   }
 }
 
+body::-webkit-scrollbar {
+  width: 0.8rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #f2c333;
+}
+
 .dropdown {
   position: relative;
 }
