--- a/resources/sass/overrides.scss
+++ b/resources/sass/overrides.scss
@@ -1,3 +1,16 @@
+body::-webkit-scrollbar{
+	width: 0.8rem;
+}
+
+body::-webkit-scrollbar-track{
+	background: #1e1e24;
+}
+
+body::-webkit-scrollbar-thumb{
+	background: #f2c333;
+}
+
+
 .dropdown{
 	position: relative;
 
