--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23277,6 +23277,12 @@ body::-webkit-scrollbar-thumb {
   min-height: 3.5rem;
 }
 
+@media (max-width: 1024px) {
+  .navbar-end .navbar-item .buttons a {
+    width: 100% !important;
+  }
+}
+
 .button.is-primary {
   background-color: #f2c333;
 }
@@ -23621,6 +23627,70 @@ body::-webkit-scrollbar-thumb {
   padding-right: 50px !important;
 }
 
+.m-t-60 {
+  margin-top: 60px !important;
+}
+
+.p-t-60 {
+  padding-top: 60px !important;
+}
+
+.m-b-60 {
+  margin-bottom: 60px !important;
+}
+
+.p-b-60 {
+  padding-bottom: 60px !important;
+}
+
+.m-l-60 {
+  margin-left: 60px !important;
+}
+
+.p-l-60 {
+  padding-left: 60px !important;
+}
+
+.m-r-60 {
+  margin-right: 60px !important;
+}
+
+.p-r-60 {
+  padding-right: 60px !important;
+}
+
+.m-t-65 {
+  margin-top: 65px !important;
+}
+
+.p-t-65 {
+  padding-top: 65px !important;
+}
+
+.m-b-65 {
+  margin-bottom: 65px !important;
+}
+
+.p-b-65 {
+  padding-bottom: 65px !important;
+}
+
+.m-l-65 {
+  margin-left: 65px !important;
+}
+
+.p-l-65 {
+  padding-left: 65px !important;
+}
+
+.m-r-65 {
+  margin-right: 65px !important;
+}
+
+.p-r-65 {
+  padding-right: 65px !important;
+}
+
 .m-t-75 {
   margin-top: 75px !important;
 }
@@ -23651,6 +23721,38 @@ body::-webkit-scrollbar-thumb {
 
 .p-r-75 {
   padding-right: 75px !important;
+}
+
+.m-t-80 {
+  margin-top: 80px !important;
+}
+
+.p-t-80 {
+  padding-top: 80px !important;
+}
+
+.m-b-80 {
+  margin-bottom: 80px !important;
+}
+
+.p-b-80 {
+  padding-bottom: 80px !important;
+}
+
+.m-l-80 {
+  margin-left: 80px !important;
+}
+
+.p-l-80 {
+  padding-left: 80px !important;
+}
+
+.m-r-80 {
+  margin-right: 80px !important;
+}
+
+.p-r-80 {
+  padding-right: 80px !important;
 }
 
 .m-t-100 {
