--- a/resources/sass/overrides.scss
+++ b/resources/sass/overrides.scss
@@ -10,6 +10,18 @@ body::-webkit-scrollbar-thumb{
 	background: #f2c333;
 }
 
+// ---------------------------------------------
+// On mouse highlight
+.post-content ::-moz-selection { /* Code for Firefox */
+  color: black;
+  background: yellow;
+}
+
+.post-content ::selection {
+  color: black;
+  background: yellow;
+}
+// ---------------------------------------------
 .dropdown{
 	position: relative;
 
