Added covid tracker
Covid tracker feature with live news and twitter updates

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,8 @@
 
 // Bulma
 @import '~bulma/bulma';
+@import 'bulma';
+@import '~bulma-extensions/bulma-divider/dist/css/bulma-divider';
 
 // Font awesome
 // @import "node_modules/font-awesome/scss/font-awesome";
