--- a/resources/sass/overrides.scss
+++ b/resources/sass/overrides.scss
@@ -61,6 +61,12 @@ body::-webkit-scrollbar-thumb{
 	}   
 }
 
+.navbar-right{
+	@media(max-width: 1024px){
+		width: 100%;
+	}
+}
+
 .button.is-primary{
 	background-color: #f2c333;
 }
@@ -93,3 +99,86 @@ body::-webkit-scrollbar-thumb{
 // 	color: black;
 // 	border-bottom: 3px solid #f2c333;
 // }
+
+// ------------------ //
+// Corona Tracker    //
+// ---------------- //
+.global-corona > .heading{
+	font-weight: bold;
+}
+
+.global-confirmed{
+	color: #ff073a;
+}
+
+.global-recovered{
+	color: #007bff;
+}
+
+.global-deaths{
+	color: #6c757d;
+}
+
+
+.uppercase {
+	text-transform: uppercase;
+}
+
+//** button
+.btn {
+	display: inline-block;
+	background: transparent;
+	color: inherit;
+	font: inherit;
+	border: 0;
+	outline: 0;
+	padding: 0;
+	transition: all 200ms ease-in;
+	cursor: pointer;
+	
+	&--primary {
+		background: #f2c333;
+		color: #fff;
+		box-shadow: 0 0 10px 2px rgba(0, 0, 0, .1);
+		border-radius: 2px;
+		padding: 12px 36px;
+		
+		&:hover {
+			background: darken(#f2c333, 4%);
+		}
+		
+		&:active {
+			background: #f2c333;
+			box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, .2);
+		}
+	}
+	
+	&--inside {
+		margin-left: -96px;
+	}
+}
+
+//** form
+.form {	
+	&__field {
+		width: 360px;
+		background: #fff;
+		color: #6c757d;
+		font: inherit;
+		// box-shadow: 0 6px 10px 0 rgba(0, 0, 0 , .1);
+    box-shadow: 0 10px 35px rgba(0,0,0,.1);
+    border-radius: 5px;
+		border: 0;
+		outline: 0;
+		padding: 22px 18px;
+	}
+}
+
+// --------------- //
+// twitter widget //
+// ------------- //
+.timeline-Tweet-text {
+    font-size: 12px;
+    line-height: 18px;
+    font-weight: 300;
+}
